Fix for captcha which causes scroll on mobile.

--- a/docroot/themes/eminent_sardar/eminent_sardar.css
+++ b/docroot/themes/eminent_sardar/eminent_sardar.css
@@ -219,6 +219,7 @@ video,
 }
 #conatcat-info .captcha {
   padding: 15px;
+  overflow: hidden;
 }
 .navbar-collapse {
   padding: 0px;
